--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,15 @@
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-pager-view": "6.2.3"
+    "react-native-svg": "^15.0.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
